--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
         <img src="https://i.ibb.co/5vTNNMT/image.png" alt="Netflix Logo">
         <h2>Filmes, séries e muito mais. Sem limites.</h2>
         <p>Assista onde quiser. Cancele quando quiser.</p>
-        <button class="signin-button">Entrar</button>
+        <button class="signin-button"><a href="login.html">Entrar</a></button>
     </div>
+    
     <div class="feature">
         <img src="https://a.imagem.app/bP5dON.png" alt="Feature 1">
         <div>
