--- a/catalogo.html
+++ b/catalogo.html
@@ -33,7 +33,7 @@
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 20px;
-            color: #e50914; /* Cor do título */
+            color: #fafafa; /* Cor do título */
         }
         .movie {
             display: inline-block;
@@ -94,11 +94,11 @@
             <div class="movie-list">
                 <div class="movie">
                     <img src="imagens/img3.jpeg" alt="Nome do Filme 3" border="0" height="266.78px">
-                    <p>Nome do Filme 3</p>
+                    <p>Lisbela e o Prisioneiro</p>
                 </div>
                 <div class="movie">
                     <img src="imagens/img4.jpg" alt="Nome do Filme 4" border="0" height="266.78px">
-                    <p>Nome do Filme 4</p>
+                    <p>Cine Holliúdy</p>
                 </div>
                 <!-- Adicione mais filmes aqui -->
             </div>
