--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .faq h3 {
             font-size: 36px; /* Aumenta o tamanho do título */
             margin-bottom: 20px;
-            color: #e50914; /* Cor vermelha do Netflix */
+            color: #ffffff; /* Cor vermelha do Netflix */
         }
         .faq-item {
             position: relative;
@@ -89,7 +89,7 @@
             height: 16px; /* Define a altura do ícone + */
             text-align: center;
             line-height: 16px; /* Centraliza verticalmente */
-            background-color: #e50914; /* Cor vermelha do Netflix */
+            background-color: #ffffff; /* Cor vermelha do Netflix */
             color: #fff; /* Cor do ícone + */
             border-radius: 50%; /* Deixa o ícone + circular */
         }
@@ -133,7 +133,7 @@
         }
         .contact-form h3 {
             font-size: 24px;
-            color: #e50914;
+            color: #ffffff;
             margin-bottom: 20px;
         }
         .contact-form label {
@@ -200,29 +200,26 @@
             <p>Veja o que quiser, quando quiser.</p>
         </div>
     </div>
-    <div class="feature">
-        <div>
-            <p>Aproveite a Cine Bacurau em seu smartphone, tablet, smart TV, notebook ou qualquer dispositivo conectado à Internet.</p>
-        </div>
-        <img src="./imagens/image-assistaemvariosaparelhos.png" alt="Feature 4">
-    </div>
     <div class="faq">
         <!-- ... Código das perguntas frequentes ... -->
     </div>
 
     <div class="faq">
-        <h3>Perguntas Frequentes</h3>
+        <h3 style="text-align: center;">Perguntas Frequentes</h3>
         <div class="faq-item">
             <div class="faq-question">
-                <p class="faq-question-text">Como faço para criar uma conta?</p>
+                <p class="faq-question-text">Como faço para criar a conta? 
+                </p>
             </div>
-            <p class="faq-answer">É fácil! Basta clicar em "Entrar" no canto superior direito do site e escolher "Crie uma conta".</p>
+            <p class="faq-answer">Clique no ícone de "entrar" logo em seguida você será encaminhado para aba de login onde tem as opções de entrar e cadastrar-se. Ao clicar no ícone de cadastrar-se você irá para aba onde poderá fazer sua assinatura ou se cadastrar de maneira gratuita.
+
+            </p>
         </div>
         <div class="faq-item">
             <div class="faq-question">
-                <p class="faq-question-text">Quanto custa a assinatura?</p>
+                <p class="faq-question-text">Quanto custa o acesso?</p>
             </div>
-            <p class="faq-answer">A primeira parcela é cobrada no momento da assinatura e o restante no próximo mês.</p>
+            <p class="faq-answer">Ele é gratuito com a presença de anúncios, no entanto se você quer ter um acesso sem anúncios, pode optar por pagar 6,00 mensais para assistir os filmes sem anúncios</p>
         </div>
         <div class="faq-item">
             <div class="faq-question">
@@ -259,7 +256,7 @@
     <p class="copyright">© 2023 Todos os direitos reservados.</p>
 </div>
 <div class="contact-form">
-    <h3>Entre em Contato Com Nossa Consultoria</h3>
+    <h3 style="text-align: center;">Entre em Contato Com Nossa Consultoria</h3>
     <form action="processar_formulario.php" method="POST">
         <label for="name">Nome:</label>
         <input type="text" id="name" name="name" required>
